2011-09-16 Malignant Manor <malignantmanor@users.sourceforge.net>
	* exult.cc: remove unused variable in setup_video

2011-09-15 Dominik Reichardt <dominus@users.sourceforge.net>
	* exult.cc: fix fullscreen toggle problem in setup_video function
	  when using the TOGGLE_FULLSCREEN parameter

2011-03-16 Dominik Reichardt <dominus@users.sourceforge.net>
	* audio/midi_drivers/CoreAudioMidiDriver.cpp: accepted patch #3214169 which
	  adds soundfont loading to OS X' CoreAudio driver. Full path to soundfont needs
	  to be in <audio><midi><coreaudio_soundfont>
	* Redme docs changed accordingly
	
2011-03-02 Malignant Manor <malignantmanor@users.sourceforge.net>
	* combat.cc: Fix regression in 6824 that could cause a crash
		because ready_best_shield was being called without checking
		several conditions. (Bug 3196072)

2011-02-25 Malignant Manor <malignantmanor@users.sourceforge.net>
	* actorio.cc, actors.cc, party.cc: Force party members and Avatar
		alignment to friendly.
	* combat.cc: Simplify find_opponents due to the above change. Fix
		regression in 6548 that caused party members to attack
		unconscious npcs.
	* actors.cc: Avatar can be charmed again in normal charmed
		difficulty but effective alignment doesn't change.
		(behaves like the original)

2011-02-09 Dominik Reichardt <dominus@users.sourceforge.net>
	* macosx/diskback.png: added a background image for the OS X snapshot disk image
	* macosx/DS_Store: above backgrund added and a new layout of the snapshot disk image
	* Makefile.am: some disk image tweaking
	
2011-02-08 Malignant Manor <malignantmanor@users.sourceforge.net>
	* gamewin.*, schedule.cc, shapes/items.h: Add unused npc messages.
		Fix wrong message number for SI alt intro.
	* data/exultmsg.txt: Fix typo in alt SI intro

2011-02-07 Malignant Manor <malignantmanor@users.sourceforge.net>
	* schedule.*: Don't have eat schedule use messages or add more
		than one piece of food since the original doesn't and remove