@@ -1,3 +1,8 @@
+2011-09-28 Dominik Reichardt <dominus@users.sourceforge.net>
+	* shapes/pngio.cc: 'jmpbuf' has been deprecated for a long time and libpng >=1.5 will
+	  will give an error instead of a warning. 'png_jmpbuf' has been availlable before 
+	  libpng 1.2 so it should be ok to use without an explicit check.
+	
 2011-09-16 Malignant Manor <malignantmanor@users.sourceforge.net>
 	* exult.cc: remove unused variable in setup_video
 
